--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
-* linguist-vendored
-*.cs linguist-vendored=false
+#* linguist-vendored
+#*.cs linguist-vendored=false
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
